Started work on decoding image.
Incomplete.